Add keyboard directional commands for snake head

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -16,19 +16,18 @@ header {
     height: 500px;
     border: 3px double white;
     margin: auto;
-    padding:0;
-
+    padding: 0;
     .quadrant {
-    	border: 1px solid grey;
-    	box-sizing: border-box;
-    	width: 10px;
-    	height: 10px;
-    	float: left;
-    	margin: 0;
-    	padding: 0;
+        border: 1px solid grey;
+        box-sizing: border-box;
+        width: 10px;
+        height: 10px;
+        float: left;
+        margin: 0;
+        padding: 0;
     }
-
     .litup {
-    	background: orange;
+        background: orange;
+        border-radius: 100%;
     }
 }
