Add grass background. Make style changes. Add pause functionality

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -18,13 +18,15 @@ header {
     margin: auto;
     padding: 0;
     .quadrant {
-        border: 1px solid grey;
+        //border: 1px solid grey;
         box-sizing: border-box;
         width: 10px;
         height: 10px;
         float: left;
         margin: 0;
         padding: 0;
+        background: url(../../src/images/grass.gif);
+        background-size: cover;
     }
     .snake {
         background: orange;
@@ -32,7 +34,7 @@ header {
     }
 
     .fruit {
-        background-color: red;
+        background: red;
         border-radius: 100%;
     }
 }
