Create score keeper

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -54,4 +54,8 @@ header {
         margin: 10px auto;
         outline: none;
     }
+    .game_info {
+        text-align: center;
+        color: white;
+    }
 }
