--- a/src/css/style.less
+++ b/src/css/style.less
@@ -5,7 +5,6 @@
 }
 
 body {
-
     padding: 0 50px;
     background-color: transparent;
 }
@@ -25,6 +24,15 @@ header {
     border: 3px double white;
     margin: auto;
     padding: 0;
+    &:before {
+        box-shadow: inset 0 0 41px 6px rgba(0, 0, 0, 0.75);
+        content: '';
+        position: absolute;
+        left: 18px;
+        right: 0;
+        width: 96%;
+        height: 99%;
+    }
     .quadrant {
         //border: 1px solid grey;
         box-sizing: border-box;
@@ -40,7 +48,6 @@ header {
         background: orange;
         border-radius: 100%;
     }
-
     .fruit {
         background: red;
         border-radius: 100%;
