--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,11 @@ header .title {
 #legend .game_controller button .fa {
   font-size: 2rem;
 }
+#legend .game_controller .pressed {
+  border-style: inset;
+  background: #D9534F;
+  color: white;
+}
 @media screen and (min-width: 768px) {
   .game_buttons button {
     width: 100%;
