--- a/src/css/style.less
+++ b/src/css/style.less
@@ -75,6 +75,11 @@ header {
                 font-size: 2rem;
             }
         }
+        .pressed {
+            border-style: inset;
+            background: #D9534F;
+            color: white;
+        }
     }
 }
 
