--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,23 +1,39 @@
+* {
+  outline: none;
+}
 :root {
   background: black;
   color: white;
   font-family: 'Arial';
 }
 body {
-  padding: 0 50px;
   background-color: transparent;
 }
-button {
-  outline: none;
-}
-header .title {
-  text-align: center;
+header {
   color: white;
+  padding: 1rem;
+  font-size: 2rem;
+}
+header .game_buttons {
+  text-align: right;
+}
+header .game_buttons button {
+  border-radius: 100%;
+  height: 75px;
+  width: 75px;
+  margin: 0 0 0 .5rem;
+  padding: 0;
+  vertical-align: top;
+  border: none;
+}
+section {
+  padding: 20px;
 }
 .board {
   box-sizing: content-box;
   background: green;
   width: 100%;
+  max-width: 500px;
   border: 3px double white;
   margin: auto;
   padding: 0;
@@ -48,12 +64,8 @@ header .title {
   background: red;
   border-radius: 100%;
 }
-#legend .game_buttons button {
-  margin: 10px auto;
-}
-#legend .game_info {
-  text-align: center;
-  color: white;
+#legend .game_controller {
+  padding: 2rem;
 }
 #legend .game_controller button {
   background: white;
@@ -74,19 +86,13 @@ header .title {
   }
 }
 @media screen and (max-width: 768px) {
-  header .title {
+  header {
     font-size: 1rem;
   }
-  .game_buttons button {
-    font-size: 1rem;
-    height: 60px;
-    width: 60px;
+  header .game_buttons button {
+    height: 40px;
+    width: 40px;
     border-radius: 100%;
-  }
-  .game_buttons .game_info,
-  .game_buttons h3,
-  .game_buttons h2 {
-    font-size: 1rem;
   }
   .game_controller button {
     height: 5rem;
