--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,3 +1,8 @@
+* {
+    outline: none;
+    //border: 1px red solid;
+}
+
 :root {
     background: black;
     color: white;
@@ -5,25 +10,36 @@
 }
 
 body {
-    padding: 0 50px;
     background-color: transparent;
 }
 
-button {
-    outline: none;
+header {
+    color: white;
+    padding: 1rem;
+    font-size: 2rem;
+    .game_buttons {
+        text-align: right;
+        button {
+            border-radius: 100%;
+            height: 75px;
+            width: 75px;
+            margin: 0 0 0 .5rem;
+            padding: 0;
+            vertical-align: top;
+            border: none;
+        }
+    }
 }
 
-header {
-    .title {
-        text-align: center;
-        color: white;
-    }
+section {
+    padding: 20px;
 }
 
 .board {
     box-sizing: content-box;
     background: green;
     width: 100%;
+    max-width: 500px;
     border: 3px double white;
     margin: auto;
     padding: 0;
@@ -58,16 +74,8 @@ header {
 }
 
 #legend {
-    .game_buttons {
-        button {
-            margin: 10px auto;
-        }
-    }
-    .game_info {
-        text-align: center;
-        color: white;
-    }
     .game_controller {
+        padding: 2rem;
         button {
             background: white;
             border-radius: 10px;
@@ -94,19 +102,13 @@ header {
 
 @media screen and (max-width: 768px) {
     header {
-        .title {
-            font-size: 1rem;
-        }
-    }
-    .game_buttons {
-        button {
-            font-size: 1rem;
-            height: 60px;
-            width: 60px;
-            border-radius: 100%;
-        }
-        .game_info, h3, h2 { 
-            font-size: 1rem;
+        font-size: 1rem;
+        .game_buttons {
+            button {
+                height: 40px;
+                width: 40px;
+                border-radius: 100%;
+            }
         }
     }
     .game_controller {
