--- a/src/css/style.less
+++ b/src/css/style.less
@@ -15,7 +15,7 @@ body {
 
 header {
     color: white;
-    padding: 1rem;
+    padding: 4px;
     font-size: 2rem;
     .game_buttons {
         text-align: right;
@@ -32,7 +32,7 @@ header {
 }
 
 section {
-    padding: 20px;
+    padding: 0 20px;
 }
 
 .board {
