--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,70 @@ header .game_buttons button {
 section {
   padding: 0 20px;
 }
+.right {
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  /* IE 9 */
+  -webkit-transform: rotate(90deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(90deg);
+}
+.right.flip {
+  -moz-transform: scaleY(-1) rotate(90deg);
+  -o-transform: scaleY(-1) rotate(90deg);
+  -webkit-transform: scaleY(-1) rotate(90deg);
+  transform: scaleY(-1) rotate(90deg);
+  filter: FlipV;
+  -ms-filter: "FlipV";
+}
+.down {
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  /* IE 9 */
+  -webkit-transform: rotate(180deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(180deg);
+}
+.down.flip {
+  -moz-transform: scaleX(-1) rotate(180deg);
+  -o-transform: scaleX(-1) rotate(180deg);
+  -webkit-transform: scaleX(-1) rotate(180deg);
+  transform: scaleX(-1) rotate(180deg);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
+.left {
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  /* IE 9 */
+  -webkit-transform: rotate(-90deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(-90deg);
+}
+.left.flip {
+  -moz-transform: scaleY(-1) rotate(-90deg);
+  -o-transform: scaleY(-1) rotate(-90deg);
+  -webkit-transform: scaleY(-1) rotate(-90deg);
+  transform: scaleY(-1) rotate(-90deg);
+  filter: FlipV;
+  -ms-filter: "FlipV";
+}
+.up {
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  /* IE 9 */
+  -webkit-transform: rotate(0deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(0deg);
+}
+.up.flip {
+  -moz-transform: scaleX(-1) rotate(0deg);
+  -o-transform: scaleX(-1) rotate(0deg);
+  -webkit-transform: scaleX(-1) rotate(0deg);
+  transform: scaleX(-1) rotate(0deg);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
 .board {
   box-sizing: content-box;
   background: green;
@@ -37,20 +101,20 @@ section {
   border: 3px double white;
   margin: auto;
   padding: 0;
-}
-.board:before {
-  box-shadow: inset 0 0 41px 6px rgba(0, 0, 0, 0.75);
-  content: '';
-  position: absolute;
-  left: 18px;
-  right: 0;
-  width: 96%;
-  height: 99%;
+  /*&:before {
+        box-shadow: inset 0 0 41px 6px rgba(0, 0, 0, 0.75);
+        content: '';
+        position: absolute;
+        left: 18px;
+        right: 0;
+        width: 96%;
+        height: 99%;
+    }*/
 }
 .board .quadrant {
   box-sizing: border-box;
-  width: 2%;
-  height: 2%;
+  width: 4%;
+  height: 4%;
   float: left;
   margin: 0;
   padding: 0;
@@ -58,7 +122,19 @@ section {
 }
 .board .snake {
   background: orange;
-  border-radius: 100%;
+  background-size: cover!important;
+}
+.board .snake.snake-head {
+  background: url('../images/snake-graphics_02.png');
+}
+.board .snake.snake-body-1 {
+  background: url('../images/snake-graphics_03.png');
+}
+.board .snake.snake-body-main {
+  background: url('../images/snake-graphics_04.png');
+}
+.board .snake.snake-tail {
+  background: url('../images/snake-graphics_05.png');
 }
 .board .fruit {
   background: red;
