--- a/src/css/style.less
+++ b/src/css/style.less
@@ -133,15 +133,15 @@ section {
         &.snake-tail {
             background: url('../images/snake-graphics_10.png');
         }
-        .corner {
-            &.snake-corner {
-                background: url('../images/snake-graphics_08.png');
-            }
-            &.snake-corner-out {
+        &.snake-corner {
+            &.main {
                 background: url('../images/snake-graphics_05.png');
             }
-            &.snake-corner-tail {
-                background: url('../images/snake-graphics_09.png');
+            &.out {
+                background: url('../images/snake-graphics_08.png');
+            }
+            &.tail {
+                background: url('../images/snake-graphics_07.png');
             }
         }
     }
