--- a/src/css/style.less
+++ b/src/css/style.less
@@ -33,12 +33,12 @@ header {
     font-family: @my-font;
     text-shadow: 0 0.3px 0.5px black;
     .title {
-        font-size: 2rem;
+        font-size: 100%;
     }
     .game_buttons {
         text-align: right;
         button {
-            font-size: 1rem;
+            font-size: 100%;
             border-radius: 100%;
             height: 75px;
             width: 75px;
@@ -47,7 +47,10 @@ header {
             vertical-align: top;
             border: none;
             text-shadow: 0 0.3px 0.5px black;
-            &::first-letter { 
+            &:not(#reset)::first-letter { 
+                text-decoration: underline;
+            }
+            .underline { 
                 text-decoration: underline;
             }
         }
@@ -261,7 +264,7 @@ section {
     }
 }
 
-@media screen and (min-width: 768px) {
+/*@media screen and (min-width: 768px) {
     .game_buttons {
         button {
             width: 100%;
@@ -272,7 +275,7 @@ section {
 
 @media screen and (max-width: 768px) {
     header {
-        font-size: 1rem;
+        font-size: 100%;
         .game_buttons {
             button {
                 height: 40px;
@@ -287,7 +290,7 @@ section {
         }
     }
 }
-
+*/
 .hidden,
 .ui-loader {
     display: none;
