--- a/src/css/style.less
+++ b/src/css/style.less
@@ -53,6 +53,10 @@ header {
             .underline { 
                 text-decoration: underline;
             }
+            &#options {
+                background: #5B9B5B;
+                font-size: 150%;
+            }
         }
     }
 }
@@ -264,23 +268,21 @@ section {
     }
 }
 
-/*@media screen and (min-width: 768px) {
-    .game_buttons {
-        button {
-            width: 100%;
-            max-width: 300px;
-        }
-    }
-}
+
 
 @media screen and (max-width: 768px) {
     header {
         font-size: 100%;
         .game_buttons {
+            padding-right: 0;
             button {
                 height: 40px;
                 width: 40px;
                 border-radius: 100%;
+                margin: 0;
+                &::first-letter { 
+                    text-decoration: none!important;
+                }
             }
         }
     }
@@ -289,8 +291,10 @@ section {
             height: 5rem;
         }
     }
+    .no-mobile {
+        display: none;
+    }
 }
-*/
 .hidden,
 .ui-loader {
     display: none;
