--- a/src/css/style.css
+++ b/src/css/style.css
@@ -548,9 +548,6 @@ section {
   color: white;
 }
 @media screen and (max-width: 768px) {
-  header {
-    font-size: 100%;
-  }
   header .game_buttons {
     padding-right: 0;
   }
@@ -559,8 +556,10 @@ section {
     width: 40px;
     border-radius: 100%;
     margin: 0;
+    font-size: 0px;
   }
   header .game_buttons button::first-letter {
+    font-size: 15px;
     text-decoration: none!important;
   }
   .game_controller button {
