Fix reset typo and change styles

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -20,6 +20,7 @@ body {
       rgba(0, 0, 0, 0.3) 10px,
       rgba(0, 0, 0, 0.3) 20px
     ),
+    //url('');
     url(http://s3-us-west-2.amazonaws.com/s.cdpn.io/3/old_map_@2X.png);
     max-width: 600px;
     box-shadow: 0 0 43px 17px black;
