--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,11 +8,24 @@
   font-family: 'Seymour One', sans-serif;
 }
 body {
-  background: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 10px, rgba(0, 0, 0, 0.3) 10px, rgba(0, 0, 0, 0.3) 20px), url(http://s3-us-west-2.amazonaws.com/s.cdpn.io/3/old_map_@2X.png);
+  background: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 10px, rgba(0, 0, 0, 0.3) 10px, rgba(0, 0, 0, 0.3) 20px), url('');
   max-width: 600px;
   box-shadow: 0 0 43px 17px black;
   border-left: 10px solid rgba(0, 128, 0, 0.2);
   border-right: 10px solid rgba(0, 128, 0, 0.2);
+}
+.modal-content {
+  background: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 10px, rgba(0, 0, 0, 0.3) 10px, rgba(0, 0, 0, 0.3) 20px), url(http://s3-us-west-2.amazonaws.com/s.cdpn.io/3/old_map_@2X.png);
+  font-family: 'Seymour One', sans-serif;
+  color: white;
+}
+.modal-content .modal-header,
+.modal-content .modal-footer {
+  background: #ADA58E;
+}
+.modal-content h5 {
+  color: #FFE0A2;
+  text-shadow: 0 0.3px 0.5px black;
 }
 header {
   color: white;
@@ -27,7 +40,8 @@ header .game_buttons {
   text-align: right;
 }
 header .game_buttons button {
-  font-size: 100%;
+  font-size: 92%;
+  letter-spacing: -0.6px;
   border-radius: 100%;
   height: 75px;
   width: 75px;
